# Hybrid-Visual-Servoing

./: .gitmodules  Readme.md
cv4_bridge/: CMakeLists.txt  package.xml
cv4_bridge/python/: .cproject
cv4_bridge/test/: .cproject
estimated_pose_msg/: CMakeLists.txt  package.xml
estimated_pose_msg/msg/: estimatedPose.msg
kinova_twist/: CMakeLists.txt  package.xml
m3t/: CMakeLists.txt
m3t/doc/: .cproject
m3t/examples/: .cproject  CMakeLists.txt  evaluate_rtb_dataset.cpp  parameter_study_rtb_dataset.cpp  rtb_evaluator.cpp  rtb_evaluator.h  rtb_evaluator_ros.cpp  run_on_camera_sequence.cpp
m3t/examples/urdf_pose_converter/: converter.py
m3t/include/m3t/: MainRos.h  body.h  camera.h  generator.h  m3t_on_sequence_ros.h  manual_detector.h  publisher.h  ros_camera.h  ros_publisher.h  tracker.h
m3t/src/: MainRos.cpp  convert_to_matrix.cpp  depth_modality.cpp  link.cpp  m3t_for_non_kinematic_structures.cpp  main_ros.cpp  manual_detector.cpp  optimizer.cpp  ros_camera.cpp  ros_publisher.cpp  texture_modality.cpp  tf_info.cpp  tracker.cpp  viewer.cpp
planning_based_control/: CMakeLists.txt  package.xml
planning_based_control/include/: ArmController.h  ArmKinematics.h  ObstacleAvoidance.h
planning_based_control/src/: ObstacleAvoidance.cpp  controller.cpp  kinematics.cpp  kinematics_node.cpp
pose_estimation_icg/: .cproject  .project  CMakeLists.txt  package.xml
pose_estimation_icg/bodies/: clclrp41gzjy.mtl  pipestar-complete-transformed-2.stl  pipestar-complete-transformed.stl  pipestar.FCStd  pipestar.yaml  pipestar_detector.yaml  pipestar_manual_detector.yaml  pipestar_unsym.yaml  pipestar_unsym_manual_detector.yaml
pose_estimation_icg/include/icg/: MainRos.h  azure_kinect_camera.h  basic_depth_renderer.h  body.h  common.h  detector.h  generator.h  image_viewer.h  loader_camera.h  manual_detector.h  model.h  normal_renderer.h  normal_viewer.h  optimizer.h  publisher.h  realsense_camera.h  refiner.h  region_model.h  renderer_geometry.h  ros_camera.h  ros_publisher.h  static_detector.h  tracker.h  viewer.h
pose_estimation_icg/launch/: getjag.launch  posetracking.launch  posetracking_debug_gdb.launch  posetracking_debug_valgrind.launch
pose_estimation_icg/media/object_robocup_pipestar/: model.config  model.sdf
pose_estimation_icg/media/object_robocup_pipestar/meshes/: Pipestar.dae  PipestarHead.dae  PipestarHead_collision.dae
pose_estimation_icg/src/: CMakeLists.txt  MainRos.cpp  README.md  azure_kinect_camera.cpp  basic_depth_renderer.cpp  body.cpp  camera.cpp  common.cpp  depth_modality.cpp  depth_model.cpp  detector.cpp  generator.cpp  image_viewer.cpp  loader_camera.cpp  main_ros.cpp  manual_detector.cpp  modality.cpp  model.cpp  normal_renderer.cpp  normal_viewer.cpp  optimizer.cpp  publisher.cpp  realsense_camera.cpp  refiner.cpp  region_modality.cpp  region_model.cpp  renderer.cpp  renderer_geometry.cpp  ros_camera.cpp  ros_publisher.cpp  static_detector.cpp  tracker.cpp  viewer.cpp
visual_servoing/: CMakeLists.txt  package.xml
visual_servoing/config/: visual_servo_params.yaml
visual_servoing/include/: ibvs_arm.h  ibvs_keypoint_tracker.h  pbvs.h
visual_servoing/launch/: camera.launch  cameraStereo.launch  convertTomatrix.launch  getjag.launch  getjag_controller.launch  ibvs.launch  visualServo.launch
visual_servoing/models/: ibvs_model.yaml
visual_servoing/src/: ibvs_arm.cpp  ibvs_arm_node.cpp  ibvs_keypoint_tracker.cpp  pbvs.cpp  pbvs_node.cpp
